Fix margin top h2 featured card on mobile

--- a/app/assets/stylesheets/components/_featured_card.scss
+++ b/app/assets/stylesheets/components/_featured_card.scss
@@ -79,5 +79,8 @@
   font-weight: bold;
   font-size: 16px;
   padding-bottom: 20px;
+  @media (max-width: 576px) {
+    margin-top: 60px;
+  }
 }
 
